# lis-analyzer-integration-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
samples/input/: analyzer_results.csv  analyzer_results.json
samples/output/: processing_summary.json  transformed_results.json  validation_errors.json
src/lis_analyzer_demo/: __init__.py  cli.py  io.py  processor.py  reference.py
tests/: test_demo.py
