[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lis-analyzer-integration-demo"
version = "0.1.0"
description = "Public-safe LIS analyzer integration portfolio demo built with synthetic data."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "dawit" }
]
dependencies = []

[project.scripts]
lis-analyzer-demo = "lis_analyzer_demo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
